# parse-book-source

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cd.yaml  ci.yml
examples/json/: Cargo.toml
examples/json/src/: main.rs
src/: error.rs  http_client.rs  lib.rs  main.rs  variables.rs
src/book/: book_list.rs  chapter_list.rs  info.rs  mod.rs
src/explore/: explore_item.rs  mod.rs
src/search/: mod.rs
src/source/: mod.rs
src/source/rule/: mod.rs  rule_book_info.rs  rule_content.rs  rule_explore.rs  rule_search.rs  rule_toc.rs
src/utils/: data_with_regex.rs  json_data.rs  mod.rs  parse_url.rs
