[package]
name = "parse-book-source"
version = "0.1.0"
edition = "2021"

[dependencies]
# aes = { version = "0.8.4", features = ["hazmat"] }
anyhow = "1.0.94"
chrono = { version = "0.4.38", features = ["serde"] }
# base64 = "0.22.1"
# cbc = "0.1.2"
jsonpath-rust = "0.7.3"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
ring = { version = "0.17.8", features = ["std"] }
scraper = "0.21.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.4"
tokio = { version = "1.42.0", features = ["full"] }
